Changed styles and fixed spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,14 @@
     h1 {
-        text-align: middle;
+        text-align: center;
         font-size: 3em;
+        margin: 10 auto;
     }
     
     span {
         text-align: middle;
     }
     
+
     .line-chart
     {
         border: 1px solid lightgray;
@@ -40,7 +42,7 @@
     
     html *
     {
-       font-size: 1em !important;
+       font-size: 1em;
        color: #000 !important;
        font-family: 'Raleway', sans-serif !important;
     }
@@ -59,7 +61,9 @@
     
     #map {
         display:inline-block;
+        width: 700px; height: 500px; 
     }
+
     .container {
         width: 1100px;
     }
